# mlware

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linux_arm.yml  linux_intel.yml  linux_x86_64.yml
examples/: test.rs  test_file.rs  train.rs
pysrc/: instructions.txt  model.pickle  test.py  test1.py  train.py
rs-model/: convert.py  model.txt
src/: error.rs  features.rs  lib.rs  utils.rs
