[package]
name = "mlware"
version = "0.2.1"
authors = ["Marirs <marirs@gmail.com>"]
description = "Static malware detection using machine learning"
keywords = []
edition = "2018"

[dependencies]
lightgbm = "0.2.3"
thiserror = "1.0.29"
regex = "1.5.4"
maplit = "1.0.2"
pelite = "0.9.0"
murmur3 = "0.5.1"
serde_json = "*"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true