[package]
name = "mlware"
version = "0.3.4"
authors = ["Marirs <marirs@gmail.com>", "Andrey <andrey@3ig.dev>"]
description = "Static malware detection using machine learning"
keywords = ["malware", "ai", "model"]
edition = "2021"

[dependencies]
lightgbm3 = "1.0.5"
thiserror = "1.0.29"
regex = "1.10.4"
maplit = "1.0.2"
pelite = "0.10.0"
murmur3 = "0.5.2"
serde_json = "1"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
panic = "abort"
strip = "debuginfo"
